--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
     <title>speedest_logistics</title>
     <link rel="manifest" href="manifest.json" />
   <script src="splash/splash.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
   <link rel="stylesheet" type="text/css" href="splash/style.css">
   </head>
